• YamlUpdater.java now preserves existing LF/CRLF endings when appending sections. • YamlUpdaterTest.java now covers both newline styles.